--- a/FileMan/Info.plist
+++ b/FileMan/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>Filefy</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -128,7 +130,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1.0</string>
+	<string>1.0.0</string>
 	<key>CFBundleVersion</key>
 	<string>12</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
