--- a/FileMan/Info.plist
+++ b/FileMan/Info.plist
@@ -130,7 +130,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0.1</string>
+	<string>2.0.2</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -143,7 +143,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>56</string>
+	<string>57</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -178,6 +178,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Save a photo or video from file manager to photo library</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Save a photo or video from file manager to photo library</string>
 	<key>UIBackgroundModes</key>
